--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ font-family: fot-tsukuardgothic-std, sans-serif;
 font-weight: 400;
 
 font-style: normal;
+line-height: 1.5;
 }
 h1,h2,h3{
 font-family: fot-tsukuardgothic-std, sans-serif;
