--- a/style.css
+++ b/style.css
@@ -1,17 +1,20 @@
 p{
-font-family: fot-tsukuardgothic-std, sans-serif;
+font-family: source-han-sans-japanese, sans-serif;
 
 font-weight: 400;
 
 font-style: normal;
+
 line-height: 1.5;
 }
 h1,h2,h3{
-font-family: fot-tsukuardgothic-std, sans-serif;
+font-family: source-han-sans-japanese, sans-serif;
 
 font-weight: 700;
 
 font-style: normal;
+
+
 
 
  
