--- a/style.css
+++ b/style.css
@@ -1,22 +1,16 @@
 p{
-font-family: source-han-sans-japanese, sans-serif;
+font-family: fot-tsukuardgothic-std, sans-serif;
 
 font-weight: 400;
 
 font-style: normal;
-
-line-height: 1.5;
 }
 h1,h2,h3{
-font-family: source-han-sans-japanese, sans-serif;
+font-family: fot-tsukuardgothic-std, sans-serif;
 
 font-weight: 700;
 
 font-style: normal;
 
 
-
-
- 
-プロジェクトを編集
 }
