--- a/style.css
+++ b/style.css
@@ -1,18 +1,17 @@
 p{
-font-family: fot-tsukuardgothic-std, sans-serif;
+font-family: dnp-shuei-mgothic-std, sans-serif;
 
 font-weight: 400;
 
 font-style: normal;
 }
 h1,h2,h3{
-font-family: fot-tsukuardgothic-std, sans-serif;
+font-family: dnp-shuei-mgothic-std, sans-serif;
 
-font-weight: 700;
+font-weight: 600;
 
 font-style: normal;
 
 
 
-プロジェクトを編集
 }
