--- a/style.css
+++ b/style.css
@@ -1,12 +1,13 @@
+
 p{
-font-family: dnp-shuei-mgothic-std, sans-serif;
+font-family: 'Avenir','Helvetica Neue','Helvetica',dnp-shuei-mgothic-std, YuGothic,'Yu Gothic',sans-serif;
 
 font-weight: 400;
 
 font-style: normal;
 }
 h1,h2,h3{
-font-family: dnp-shuei-mgothic-std, sans-serif;
+font-family: 'Avenir','Helvetica Neue','Helvetica',dnp-shuei-mgothic-std, YuGothic,'Yu Gothic',sans-serif;
 
 font-weight: 600;
 
