--- a/style.css
+++ b/style.css
@@ -5,6 +5,8 @@ font-family: dnp-shuei-mincho-pr6, sans-serif;
 font-weight: 400;
 
 font-style: normal;
+
+width: 700px;
 }
 h1,h2,h3{
 font-family: dnp-shuei-mincho-pr6, sans-serif;
